<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Defonce_Management</string>
    <string name="action_settings">Settings</string>
    <string name="Alcool_Consumption">Alcool Consumption</string>
    <string name="Overview">Overview</string>
    <string name="wsignup">New to Défonce Management ? Sign Up here !</string>
    <string name="NickName">nickname</string>
    <string name="sign_in">Sign In</string>
    <string name="vsoftware">V0.0 of the software</string>
    <string name="nickname">NickName</string>
    <string name="email">Email</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms">Terms</string>
    <string name="you_are_a">You are a ...</string>
    <string name="gender_male">boi</string>
    <string name="gender_woman">woman</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="pils25cl">25 cL of classic Pilsner</string>
    <string name="vodkashot">3cL VodkaShot</string>
    <string name="add_an_alcool_from_the_list_below">Add an alcool from the list below</string>
    <string name="add_consumption">Add Consumption</string>
    <string name="volume_in_cl">volume in cL</string>
    <string name="or_add_a_consumption_manually">Or add a consumption manually</string>
    <string name="alcohol">alcohol %</string>
    <string name="beverage_name">beverage name</string>
    <string name="i_m_drinking_while_eating">I\'m drinking while eating</string>
    <string name="you_must_nickname">You must choose Nickname</string>
    <string name="you_must_email">You must put your email adress</string>
    <string name="you_must_pass">You must choose a password</string>
    <string name="you_pass_6">Your password must be at least 6 characters</string>
    <string name="you_must_age">You must put your age</string>
    <string name="you_must_weight">Your must put your weight</string>
    <string name="you_must_18">Your age must be above 18</string>
    <string name="you_must_terms">You must accept the terms of agreement</string>
    <string name="error">error</string>
    <string name="email_already">Email adress already used</string>
    <string name="nickname_already">Nickname already taken</string>
    <string name="Signed_Up">Signed Up</string>
    <string name="contact_dev">Facing issues ? Improvement idea ? Contact the devs</string>
    <string name="user_dont_exit">User doesn\'t exist</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="skrenmsg2">You are almost sober</string>
    <string name="skrenmsg1">You are sober</string>
    <string name="Signed_In">Signed In</string>
    <string name="welcome">Welcome</string>
</resources>
