<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="controller.SignUp_Control"
        tools:showIn="@layout/sign_up">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.698"/>
    <EditText
            android:hint="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/nickname"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.104"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/email"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.225"
    />
    <TextView
            android:text="@string/sign_up_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.022" app:layout_constraintHorizontal_bias="0.515"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="Password"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.352"/>
    <CheckBox
            android:text="@string/accept_terms"
            android:layout_width="129dp"
            android:gravity="center"
            android:layout_height="32dp"
            android:id="@+id/checkterms" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.351"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.763"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupbutton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.507"
            android:onClick="signUp"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.877"/>
    <TextView
            android:text=""
            android:layout_width="301dp"
            android:layout_height="28dp"
            android:gravity="center"
            android:id="@+id/errormessage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.938"/>
    <Button
            android:text="@string/terms"
            android:layout_width="86dp"
            android:gravity="center"
            android:layout_height="42dp"
            android:id="@+id/terms" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.701"
            app:layout_constraintVertical_bias="0.765"/>
    <EditText
            android:layout_width="60dp"
            android:gravity="center"
            android:hint="Age"
            android:layout_height="41dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/age"
            tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintVertical_bias="0.488"/>
    <RadioGroup
            android:layout_width="160dp"
            android:gravity="center"
            android:layout_height="77dp"
            android:id="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.626">
        <TextView
                android:gravity="center"
                android:text="@string/you_are_a"
                android:layout_width="89dp"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
        <RadioButton
                android:checked="true"
                android:gravity="center"
                android:text="@string/gender_male"
                android:layout_width="89dp"
                android:layout_height="wrap_content" android:id="@+id/man"/>
        <RadioButton
                android:gravity="center"
                android:text="@string/gender_woman"
                android:layout_width="90dp"
                android:layout_height="wrap_content" android:id="@+id/woman"/>
    </RadioGroup>
    <EditText
            android:gravity="center"
            android:hint="@string/weight_kg"
            android:layout_width="122dp"
            android:layout_height="44dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weight"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintVertical_bias="0.486"/>
</androidx.constraintlayout.widget.ConstraintLayout>