<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/welcome"
        tools:context="Controller.WelcomePage">


    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="GoToSignUp"
            android:id="@+id/SignUp"
            tools:ignore="OnClick" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.499" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignIn"
            android:onClick="GoToSignIn"
            tools:ignore="OnClick"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="132dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.009"/>
    <TextView
            android:text="@string/vsoftware"
            android:layout_width="178dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.025"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/nickname"
            android:ems="10"
            android:id="@+id/nickname"
            app:layout_constraintBottom_toTopOf="@+id/password" android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.51"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="password"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="124dp"
            app:layout_constraintHorizontal_bias="0.51"/>
    <TextView
            android:gravity="center"
            android:text="@string/wsignup"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/SignIn" android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/SignUp" app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text=""
            android:gravity="center"
            android:layout_width="174dp"
            android:layout_height="23dp"
            android:id="@+id/errormessage"
            app:layout_constraintTop_toBottomOf="@+id/SignIn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>